# voxi

./: .env.example  .gitignore  .mcp.json  README.md  design.md  package.json  tsconfig.base.json
.design-sync/: NOTES.md  config.json  conventions.md  entry.ts  fonts.css  preamble.ts  rnw-rootfix.ts  tsconfig.bundle.json
app/: app.config.js  app.config.test.ts  app.json  babel.config.js  eas.json  index.js  metro.config.js  package.json  tsconfig.json
docs/: ANALYSIS-UX-REDESIGN-PLAN.md  ANALYSIS-VOICE-PLAN.md  COLLECTION-PERSISTENCE-PLAN.md  CONVERGENCE.md  IMPLEMENTATION-STATUS.md  IOS-TESTING.md  PLAN.md  PROMPT-QUALITY-PLAN.md  RCA-reveal-audio-avfoundation.md  RECENTLY-CATALOGUED-REDESIGN-PLAN.md  REVEAL-CARD-CLEANUP-PLAN.md  REVEAL-CONTENT-QUALITY-PLAN.md  REVEAL-DOCK-GLASS-PLAN.md  RUNTIME-FOUNDATION.md  SWIPE-NAV-AND-REVISIT-LOADING-PLAN.md  TEST-PLAN.md  TESTFLIGHT-DEPLOY.md  UI-REDESIGN-PLAN.md  UNIVERSAL-HEADER-PLAN.md  api-contract.md  design-migration-plan.md  design-notes.md  observability.md  reveal-quality-baseline-before.txt  reveal-quality-proof-after.txt  voice-fork-migration.md
e2e/: README.md  package.json
services/voice-bot/: README.md  conftest.py  livekit_bot.py  pyproject.toml  verify_livekit_agent.py  verify_livekit_roundtrip.py  verify_pipeline.py  voice_server.py
services/voice-bot/tests/: factory.py  test_bridge_and_persona.py  test_pipeline.py  test_prompts.py  test_telemetry.py  test_voice_context.py  test_voice_server_offer.py
services/voice-bot/voxi_voice/: __init__.py  bff_bridge.py  livekit_agent.py  metering.py  persona.py  pipeline.py  prompts.py  providers.py  telemetry.py  transport.py
services/voice-bot/voxi_voice/prompts/: item-context.md  persona.md
(+537 files in other folders)
